bases/apps/snappit/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snappit
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: snappit
  template:
    metadata:
      labels:
        app: snappit
    spec:
      containers:
      - image: docker.io/kmjayadeep/snappit:0.1
        imagePullPolicy: IfNotPresent
        name: snappit
        ports:
        - containerPort: 3000
          protocol: TCP
      restartPolicy: Always
