bases/apps/snappit/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: snappit
  name: snappit
spec:
  ports:
  - name: web
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: snappit
  type: ClusterIP
