bases/apps/snappit/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: snappit-ingress
 annotations:
   cert-manager.io/cluster-issuer: default-clusterissuer
spec:
 tls:
 - hosts:
   - snappit.local
   secretName: snappit-tls-secret
 rules:
 - host: snappit.local
   http:
     paths:
     - backend:
         service:
           name: snappit
           port:
             number: 80
       path: /
       pathType: Prefix
